GuavaParser.output
Grammar

    0 $accept: program "end of block"

    1 program: bloqueprincipal

    2 $@1: /* empty */

    3 bloqueprincipal: $@1 bloquedeclare lfunciones

    4 bloquedeclare: /* empty */

    5 $@2: /* empty */

    6 bloquedeclare: $@2 "declare statement" '{' lvariables '}'

    7 lvariables: lvariables tipo lvar ';'
    8           | tipo lvar ';'
    9           | tipo "array" lvararreglo ';'
   10           | lvariables tipo "array" lvararreglo ';'
   11           | identificador "array" lvararreglo ';'
   12           | lvariables identificador "array" lvararreglo ';'
   13           | identificador "union" lvar ';'
   14           | lvariables identificador "union" lvar ';'
   15           | identificador "record" lvar
   16           | lvariables identificador "record" lvar ';'
   17           | lvariables union ';'
   18           | lvariables record ';'
   19           | union ';'
   20           | record ';'
   21           | tipo lvar error ';'

   22 $@3: /* empty */

   23 union: "union" identificador '{' $@3 lvariables '}'

   24 $@4: /* empty */

   25 record: "record" identificador '{' $@4 lvariables '}'

   26 lvar: identificador
   27     | lvar ',' identificador
   28     | error
   29     | lvar ',' error

   30 lvararreglo: identificador lcorchetes
   31            | lvararreglo ',' identificador lcorchetes
   32            | error lcorchetes
   33            | lvararreglo ',' error lcorchetes

   34 lcorchetes: '[' "integer value" ']'
   35           | lcorchetes '[' "integer value" ']'
   36           | '[' error ']'
   37           | lcorchetes '[' error ']'

   38 lcorchetesExp: '[' exp ']'
   39              | lcorchetesExp '[' exp ']'
   40              | '[' error ']'
   41              | lcorchetesExp '[' error ']'

   42 lfunciones: funcionmain
   43           | lfunciones1 funcionmain

   44 lfunciones1: funcion
   45            | lfunciones1 funcion

   46 $@5: /* empty */

   47 funcionmain: "function" TYPE_VOID "main function" '(' ')' '{' $@5 bloquedeclare listainstrucciones '}'

   48 $@6: /* empty */

   49 funcionmain: "function" TYPE_VOID "main function" '(' error ')' '{' $@6 bloquedeclare listainstrucciones '}'

   50 $@7: /* empty */

   51 $@8: /* empty */

   52 funcion: "function" tipo identificador '(' $@7 lparam $@8 ')' '{' bloquedeclare listainstrucciones '}'

   53 $@9: /* empty */

   54 $@10: /* empty */

   55 funcion: "function" TYPE_VOID identificador '(' $@9 lparam $@10 ')' '{' bloquedeclare listainstrucciones '}'

   56 $@11: /* empty */

   57 funcion: "function" tipo identificador '(' error ')' '{' $@11 bloquedeclare listainstrucciones '}'

   58 $@12: /* empty */

   59 funcion: "function" TYPE_VOID identificador '(' error ')' '{' $@12 bloquedeclare listainstrucciones '}'

   60 lparam: /* empty */
   61       | lparam2

   62 lparam2: tipo identificador
   63        | tipo "reference" identificador
   64        | lparam2 ',' tipo identificador
   65        | lparam2 ',' tipo "reference" identificador
   66        | tipo error
   67        | tipo "reference" error
   68        | lparam2 ',' tipo error
   69        | lparam2 ',' tipo "reference" error

   70 listainstrucciones: /* empty */
   71                   | listainstrucciones instruccion ';'
   72                   | listainstrucciones instruccion1

   73 instruccion: asignacion
   74            | llamadafuncion
   75            | "-- operator" identificador
   76            | identificador "-- operator"
   77            | "++ operator" identificador
   78            | identificador "++ operator"
   79            | entradasalida
   80            | "continue statement"
   81            | "break statement"
   82            | error identificador
   83            | identificador error
   84            | retorno

   85 instruccion1: loopfor
   86             | loopwhile
   87             | selectorif

   88 asignacion: expID ASSIGN exp
   89           | error ASSIGN exp
   90           | expID ASSIGN error

   91 entradasalida: "read statement" '(' exp ')'
   92              | "print statement" '(' exp ')'

   93 retorno: "return statement" ';'
   94        | "return statement" exp ';'

   95 $@13: /* empty */

   96 loopfor: "for loop" '(' identificador ';' expBool ';' errorloopfor ')' '{' $@13 bloquedeclare listainstrucciones '}'

   97 $@14: /* empty */

   98 loopfor: "for loop" '(' error ';' expBool ';' errorloopfor ')' '{' $@14 bloquedeclare listainstrucciones '}'

   99 $@15: /* empty */

  100 loopfor: "for loop" '(' identificador ';' error ';' errorloopfor ')' '{' $@15 bloquedeclare listainstrucciones '}'

  101 errorloopfor: asignacion
  102             | exp
  103             | error

  104 $@16: /* empty */

  105 loopwhile: "while loop" '(' errorloopwhile ')' "do clause" '{' $@16 bloquedeclare listainstrucciones '}'

  106 $@17: /* empty */

  107 loopwhile: "do clause" '{' $@17 bloquedeclare listainstrucciones '}' "while loop" '(' errorloopwhile ')'

  108 errorloopwhile: exp
  109               | error

  110 $@18: /* empty */

  111 selectorif: "if" '(' errorif ')' "then" '{' $@18 bloquedeclare listainstrucciones '}' lelseif
  112           | "if" '(' errorif ')' "then" instruccion ';'
  113           | "if" '(' errorif ')' "then" instruccion "else" instruccion ';'

  114 lelseif: /* empty */

  115 $@19: /* empty */

  116 lelseif: lelseif1 "else" '{' $@19 bloquedeclare listainstrucciones '}'

  117 $@20: /* empty */

  118 lelseif: "else" '{' $@20 bloquedeclare listainstrucciones '}'
  119        | lelseif1

  120 $@21: /* empty */

  121 lelseif1: "else" "if" '(' errorif ')' "then" '{' $@21 bloquedeclare listainstrucciones '}'

  122 $@22: /* empty */

  123 lelseif1: lelseif1 "else" "if" '(' errorif ')' "then" '{' $@22 bloquedeclare listainstrucciones '}'

  124 errorif: exp
  125        | error

  126 llamadafuncion: identificador '(' lvarovalor ')'
  127               | error '(' lvarovalor ')'

  128 lvarovalor: /* empty */
  129           | lvarovalor2

  130 lvarovalor2: lvarovalor2 ',' exp
  131            | exp
  132            | lvarovalor2 ',' error
  133            | error

  134 exp: expAritmetica
  135    | expBool
  136    | valor
  137    | expID
  138    | '(' exp ')'
  139    | llamadafuncion
  140    | '(' error ')'

  141 expID: identificador
  142      | identificador lcorchetesExp
  143      | identificador lAccesoAtributos

  144 expBool: exp "and operator" exp
  145        | exp "or operator" exp
  146        | exp COMPARISON exp
  147        | "not operator" exp

  148 expAritmetica: "- operator" exp
  149              | exp "++ operator"
  150              | exp "-- operator"
  151              | exp "<=> operator" exp
  152              | exp "+ operator" exp
  153              | exp "- operator" exp
  154              | exp "* operator" exp
  155              | exp "/ operator" exp
  156              | exp "div operator" exp
  157              | exp "mod operator" exp
  158              | exp "** operator" exp

  159 valor: "boolean value"
  160      | "string"
  161      | "character"
  162      | "integer value"
  163      | "real value"
  164      | arreglo

  165 tipo: TYPE_REAL
  166     | TYPE_INTEGER
  167     | TYPE_BOOLEAN
  168     | TYPE_CHAR
  169     | TYPE_STRING

  170 arreglo: '[' larreglo ']'

  171 larreglo: larreglo ',' exp
  172         | exp
  173         | larreglo ',' error
  174         | error

  175 lAccesoAtributos: '.' identificador
  176                 | lAccesoAtributos '.' identificador
  177                 | lAccesoAtributos '.' identificador lcorchetesExp
  178                 | '.' identificador lcorchetesExp

  179 identificador: "identifier"


Terminals, with rules where they appear

"end of block" (0) 0
'(' (40) 47 49 52 55 57 59 91 92 96 98 100 105 107 111 112 113 121
    123 126 127 138 140
')' (41) 47 49 52 55 57 59 91 92 96 98 100 105 107 111 112 113 121
    123 126 127 138 140
"* operator" (42) 154
"+ operator" (43) 152
',' (44) 27 29 31 33 64 65 68 69 130 132 171 173
"- operator" (45) 148 153
'.' (46) 175 176 177 178
"/ operator" (47) 155
';' (59) 7 8 9 10 11 12 13 14 16 17 18 19 20 21 71 93 94 96 98 100
    112 113
'[' (91) 34 35 36 37 38 39 40 41 170
']' (93) 34 35 36 37 38 39 40 41 170
'{' (123) 6 23 25 47 49 52 55 57 59 96 98 100 105 107 111 116 118 121
    123
'}' (125) 6 23 25 47 49 52 55 57 59 96 98 100 105 107 111 116 118 121
    123
error (256) 21 28 29 32 33 36 37 40 41 49 57 59 66 67 68 69 82 83 89
    90 98 100 103 109 125 127 132 133 140 173 174
ASSIGN (258) 88 89 90
"identifier" (259) 179
"integer value" (260) 34 35 162
"string" (261) 160
"character" (262) 161
"real value" (263) 163
"boolean value" (264) 159
TYPE_INTEGER (265) 166
TYPE_REAL (266) 165
TYPE_CHAR (267) 168
TYPE_VOID (268) 47 49 55 59
TYPE_BOOLEAN (269) 167
TYPE_STRING (270) 169
"for loop" (271) 96 98 100
"main function" (272) 47 49
"if" (273) 111 112 113 121 123
"then" (274) 111 112 113 121 123
"else" (275) 113 116 118 121 123
"while loop" (276) 105 107
"do clause" (277) 105 107
"return statement" (278) 93 94
"break statement" (279) 81
"continue statement" (280) 80
"record" (281) 15 16 25
"union" (282) 13 14 23
"reference" (283) 63 65 67 69
"function" (284) 47 49 52 55 57 59
"declare statement" (285) 6
"array" (286) 9 10 11 12
"print statement" (287) 92
"read statement" (288) 91
"<=> operator" (289) 151
"and operator" (290) 144
"or operator" (291) 145
"not operator" (292) 147
"div operator" (293) 156
"mod operator" (294) 157
"++ operator" (295) 77 78 149
"-- operator" (296) 75 76 150
"** operator" (297) 158
"unary - operator" (298)
COMPARISON (299) 146


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
bloqueprincipal (60)
    on left: 3, on right: 1
$@1 (61)
    on left: 2, on right: 3
bloquedeclare (62)
    on left: 4 6, on right: 3 47 49 52 55 57 59 96 98 100 105 107 111
    116 118 121 123
$@2 (63)
    on left: 5, on right: 6
lvariables (64)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, on right: 6
    7 10 12 14 16 17 18 23 25
union (65)
    on left: 23, on right: 17 19
$@3 (66)
    on left: 22, on right: 23
record (67)
    on left: 25, on right: 18 20
$@4 (68)
    on left: 24, on right: 25
lvar (69)
    on left: 26 27 28 29, on right: 7 8 13 14 15 16 21 27 29
lvararreglo (70)
    on left: 30 31 32 33, on right: 9 10 11 12 31 33
lcorchetes (71)
    on left: 34 35 36 37, on right: 30 31 32 33 35 37
lcorchetesExp (72)
    on left: 38 39 40 41, on right: 39 41 142 177 178
lfunciones (73)
    on left: 42 43, on right: 3
lfunciones1 (74)
    on left: 44 45, on right: 43 45
funcionmain (75)
    on left: 47 49, on right: 42 43
$@5 (76)
    on left: 46, on right: 47
$@6 (77)
    on left: 48, on right: 49
funcion (78)
    on left: 52 55 57 59, on right: 44 45
$@7 (79)
    on left: 50, on right: 52
$@8 (80)
    on left: 51, on right: 52
$@9 (81)
    on left: 53, on right: 55
$@10 (82)
    on left: 54, on right: 55
$@11 (83)
    on left: 56, on right: 57
$@12 (84)
    on left: 58, on right: 59
lparam (85)
    on left: 60 61, on right: 52 55
lparam2 (86)
    on left: 62 63 64 65 66 67 68 69, on right: 61 64 65 68 69
listainstrucciones (87)
    on left: 70 71 72, on right: 47 49 52 55 57 59 71 72 96 98 100
    105 107 111 116 118 121 123
instruccion (88)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84, on right: 71 112
    113
instruccion1 (89)
    on left: 85 86 87, on right: 72
asignacion (90)
    on left: 88 89 90, on right: 73 101
entradasalida (91)
    on left: 91 92, on right: 79
retorno (92)
    on left: 93 94, on right: 84
loopfor (93)
    on left: 96 98 100, on right: 85
$@13 (94)
    on left: 95, on right: 96
$@14 (95)
    on left: 97, on right: 98
$@15 (96)
    on left: 99, on right: 100
errorloopfor (97)
    on left: 101 102 103, on right: 96 98 100
loopwhile (98)
    on left: 105 107, on right: 86
$@16 (99)
    on left: 104, on right: 105
$@17 (100)
    on left: 106, on right: 107
errorloopwhile (101)
    on left: 108 109, on right: 105 107
selectorif (102)
    on left: 111 112 113, on right: 87
$@18 (103)
    on left: 110, on right: 111
lelseif (104)
    on left: 114 116 118 119, on right: 111
$@19 (105)
    on left: 115, on right: 116
$@20 (106)
    on left: 117, on right: 118
lelseif1 (107)
    on left: 121 123, on right: 116 119 123
$@21 (108)
    on left: 120, on right: 121
$@22 (109)
    on left: 122, on right: 123
errorif (110)
    on left: 124 125, on right: 111 112 113 121 123
llamadafuncion (111)
    on left: 126 127, on right: 74 139
lvarovalor (112)
    on left: 128 129, on right: 126 127
lvarovalor2 (113)
    on left: 130 131 132 133, on right: 129 130 132
exp (114)
    on left: 134 135 136 137 138 139 140, on right: 38 39 88 89 91
    92 94 102 108 124 130 131 138 144 145 146 147 148 149 150 151 152
    153 154 155 156 157 158 171 172
expID (115)
    on left: 141 142 143, on right: 88 90 137
expBool (116)
    on left: 144 145 146 147, on right: 96 98 135
expAritmetica (117)
    on left: 148 149 150 151 152 153 154 155 156 157 158, on right:
    134
valor (118)
    on left: 159 160 161 162 163 164, on right: 136
tipo (119)
    on left: 165 166 167 168 169, on right: 7 8 9 10 21 52 57 62 63
    64 65 66 67 68 69
arreglo (120)
    on left: 170, on right: 164
larreglo (121)
    on left: 171 172 173 174, on right: 170 171 173
lAccesoAtributos (122)
    on left: 175 176 177 178, on right: 143 176 177
identificador (123)
    on left: 179, on right: 11 12 13 14 15 16 23 25 26 27 30 31 52
    55 57 59 62 63 64 65 75 76 77 78 82 83 96 100 126 141 142 143 175
    176 177 178


state 0

    0 $accept: . program "end of block"

    $default  reduce using rule 2 ($@1)

    program          go to state 1
    bloqueprincipal  go to state 2
    $@1              go to state 3


state 1

    0 $accept: program . "end of block"

    "end of block"  shift, and go to state 4


state 2

    1 program: bloqueprincipal .

    $default  reduce using rule 1 (program)


state 3

    3 bloqueprincipal: $@1 . bloquedeclare lfunciones

    "declare statement"  reduce using rule 5 ($@2)
    $default             reduce using rule 4 (bloquedeclare)

    bloquedeclare  go to state 5
    $@2            go to state 6


state 4

    0 $accept: program "end of block" .

    $default  accept


state 5

    3 bloqueprincipal: $@1 bloquedeclare . lfunciones

    "function"  shift, and go to state 7

    lfunciones   go to state 8
    lfunciones1  go to state 9
    funcionmain  go to state 10
    funcion      go to state 11


state 6

    6 bloquedeclare: $@2 . "declare statement" '{' lvariables '}'

    "declare statement"  shift, and go to state 12


state 7

   47 funcionmain: "function" . TYPE_VOID "main function" '(' ')' '{' $@5 bloquedeclare listainstrucciones '}'
   49            | "function" . TYPE_VOID "main function" '(' error ')' '{' $@6 bloquedeclare listainstrucciones '}'
   52 funcion: "function" . tipo identificador '(' $@7 lparam $@8 ')' '{' bloquedeclare listainstrucciones '}'
   55        | "function" . TYPE_VOID identificador '(' $@9 lparam $@10 ')' '{' bloquedeclare listainstrucciones '}'
   57        | "function" . tipo identificador '(' error ')' '{' $@11 bloquedeclare listainstrucciones '}'
   59        | "function" . TYPE_VOID identificador '(' error ')' '{' $@12 bloquedeclare listainstrucciones '}'

    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_VOID     shift, and go to state 16
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18

    tipo  go to state 19


state 8

    3 bloqueprincipal: $@1 bloquedeclare lfunciones .

    $default  reduce using rule 3 (bloqueprincipal)


state 9

   43 lfunciones: lfunciones1 . funcionmain
   45 lfunciones1: lfunciones1 . funcion

    "function"  shift, and go to state 7

    funcionmain  go to state 20
    funcion      go to state 21


state 10

   42 lfunciones: funcionmain .

    $default  reduce using rule 42 (lfunciones)


state 11

   44 lfunciones1: funcion .

    $default  reduce using rule 44 (lfunciones1)


state 12

    6 bloquedeclare: $@2 "declare statement" . '{' lvariables '}'

    '{'  shift, and go to state 22


state 13

  166 tipo: TYPE_INTEGER .

    $default  reduce using rule 166 (tipo)


state 14

  165 tipo: TYPE_REAL .

    $default  reduce using rule 165 (tipo)


state 15

  168 tipo: TYPE_CHAR .

    $default  reduce using rule 168 (tipo)


state 16

   47 funcionmain: "function" TYPE_VOID . "main function" '(' ')' '{' $@5 bloquedeclare listainstrucciones '}'
   49            | "function" TYPE_VOID . "main function" '(' error ')' '{' $@6 bloquedeclare listainstrucciones '}'
   55 funcion: "function" TYPE_VOID . identificador '(' $@9 lparam $@10 ')' '{' bloquedeclare listainstrucciones '}'
   59        | "function" TYPE_VOID . identificador '(' error ')' '{' $@12 bloquedeclare listainstrucciones '}'

    "identifier"     shift, and go to state 23
    "main function"  shift, and go to state 24

    identificador  go to state 25


state 17

  167 tipo: TYPE_BOOLEAN .

    $default  reduce using rule 167 (tipo)


state 18

  169 tipo: TYPE_STRING .

    $default  reduce using rule 169 (tipo)


state 19

   52 funcion: "function" tipo . identificador '(' $@7 lparam $@8 ')' '{' bloquedeclare listainstrucciones '}'
   57        | "function" tipo . identificador '(' error ')' '{' $@11 bloquedeclare listainstrucciones '}'

    "identifier"  shift, and go to state 23

    identificador  go to state 26


state 20

   43 lfunciones: lfunciones1 funcionmain .

    $default  reduce using rule 43 (lfunciones)


state 21

   45 lfunciones1: lfunciones1 funcion .

    $default  reduce using rule 45 (lfunciones1)


state 22

    6 bloquedeclare: $@2 "declare statement" '{' . lvariables '}'

    "identifier"  shift, and go to state 23
    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18
    "record"      shift, and go to state 27
    "union"       shift, and go to state 28

    lvariables     go to state 29
    union          go to state 30
    record         go to state 31
    tipo           go to state 32
    identificador  go to state 33


state 23

  179 identificador: "identifier" .

    $default  reduce using rule 179 (identificador)


state 24

   47 funcionmain: "function" TYPE_VOID "main function" . '(' ')' '{' $@5 bloquedeclare listainstrucciones '}'
   49            | "function" TYPE_VOID "main function" . '(' error ')' '{' $@6 bloquedeclare listainstrucciones '}'

    '('  shift, and go to state 34


state 25

   55 funcion: "function" TYPE_VOID identificador . '(' $@9 lparam $@10 ')' '{' bloquedeclare listainstrucciones '}'
   59        | "function" TYPE_VOID identificador . '(' error ')' '{' $@12 bloquedeclare listainstrucciones '}'

    '('  shift, and go to state 35


state 26

   52 funcion: "function" tipo identificador . '(' $@7 lparam $@8 ')' '{' bloquedeclare listainstrucciones '}'
   57        | "function" tipo identificador . '(' error ')' '{' $@11 bloquedeclare listainstrucciones '}'

    '('  shift, and go to state 36


state 27

   25 record: "record" . identificador '{' $@4 lvariables '}'

    "identifier"  shift, and go to state 23

    identificador  go to state 37


state 28

   23 union: "union" . identificador '{' $@3 lvariables '}'

    "identifier"  shift, and go to state 23

    identificador  go to state 38


state 29

    6 bloquedeclare: $@2 "declare statement" '{' lvariables . '}'
    7 lvariables: lvariables . tipo lvar ';'
   10           | lvariables . tipo "array" lvararreglo ';'
   12           | lvariables . identificador "array" lvararreglo ';'
   14           | lvariables . identificador "union" lvar ';'
   16           | lvariables . identificador "record" lvar ';'
   17           | lvariables . union ';'
   18           | lvariables . record ';'

    "identifier"  shift, and go to state 23
    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18
    "record"      shift, and go to state 27
    "union"       shift, and go to state 28
    '}'           shift, and go to state 39

    union          go to state 40
    record         go to state 41
    tipo           go to state 42
    identificador  go to state 43


state 30

   19 lvariables: union . ';'

    ';'  shift, and go to state 44


state 31

   20 lvariables: record . ';'

    ';'  shift, and go to state 45


state 32

    8 lvariables: tipo . lvar ';'
    9           | tipo . "array" lvararreglo ';'
   21           | tipo . lvar error ';'

    error         shift, and go to state 46
    "identifier"  shift, and go to state 23
    "array"       shift, and go to state 47

    lvar           go to state 48
    identificador  go to state 49


state 33

   11 lvariables: identificador . "array" lvararreglo ';'
   13           | identificador . "union" lvar ';'
   15           | identificador . "record" lvar

    "record"  shift, and go to state 50
    "union"   shift, and go to state 51
    "array"   shift, and go to state 52


state 34

   47 funcionmain: "function" TYPE_VOID "main function" '(' . ')' '{' $@5 bloquedeclare listainstrucciones '}'
   49            | "function" TYPE_VOID "main function" '(' . error ')' '{' $@6 bloquedeclare listainstrucciones '}'

    error  shift, and go to state 53
    ')'    shift, and go to state 54


state 35

   55 funcion: "function" TYPE_VOID identificador '(' . $@9 lparam $@10 ')' '{' bloquedeclare listainstrucciones '}'
   59        | "function" TYPE_VOID identificador '(' . error ')' '{' $@12 bloquedeclare listainstrucciones '}'

    error  shift, and go to state 55

    TYPE_INTEGER  reduce using rule 53 ($@9)
    TYPE_REAL     reduce using rule 53 ($@9)
    TYPE_CHAR     reduce using rule 53 ($@9)
    TYPE_BOOLEAN  reduce using rule 53 ($@9)
    TYPE_STRING   reduce using rule 53 ($@9)
    ')'           reduce using rule 53 ($@9)

    $@9  go to state 56


state 36

   52 funcion: "function" tipo identificador '(' . $@7 lparam $@8 ')' '{' bloquedeclare listainstrucciones '}'
   57        | "function" tipo identificador '(' . error ')' '{' $@11 bloquedeclare listainstrucciones '}'

    error  shift, and go to state 57

    TYPE_INTEGER  reduce using rule 50 ($@7)
    TYPE_REAL     reduce using rule 50 ($@7)
    TYPE_CHAR     reduce using rule 50 ($@7)
    TYPE_BOOLEAN  reduce using rule 50 ($@7)
    TYPE_STRING   reduce using rule 50 ($@7)
    ')'           reduce using rule 50 ($@7)

    $@7  go to state 58


state 37

   25 record: "record" identificador . '{' $@4 lvariables '}'

    '{'  shift, and go to state 59


state 38

   23 union: "union" identificador . '{' $@3 lvariables '}'

    '{'  shift, and go to state 60


state 39

    6 bloquedeclare: $@2 "declare statement" '{' lvariables '}' .

    $default  reduce using rule 6 (bloquedeclare)


state 40

   17 lvariables: lvariables union . ';'

    ';'  shift, and go to state 61


state 41

   18 lvariables: lvariables record . ';'

    ';'  shift, and go to state 62


state 42

    7 lvariables: lvariables tipo . lvar ';'
   10           | lvariables tipo . "array" lvararreglo ';'

    error         shift, and go to state 46
    "identifier"  shift, and go to state 23
    "array"       shift, and go to state 63

    lvar           go to state 64
    identificador  go to state 49


state 43

   12 lvariables: lvariables identificador . "array" lvararreglo ';'
   14           | lvariables identificador . "union" lvar ';'
   16           | lvariables identificador . "record" lvar ';'

    "record"  shift, and go to state 65
    "union"   shift, and go to state 66
    "array"   shift, and go to state 67


state 44

   19 lvariables: union ';' .

    $default  reduce using rule 19 (lvariables)


state 45

   20 lvariables: record ';' .

    $default  reduce using rule 20 (lvariables)


state 46

   28 lvar: error .

    $default  reduce using rule 28 (lvar)


state 47

    9 lvariables: tipo "array" . lvararreglo ';'

    error         shift, and go to state 68
    "identifier"  shift, and go to state 23

    lvararreglo    go to state 69
    identificador  go to state 70


state 48

    8 lvariables: tipo lvar . ';'
   21           | tipo lvar . error ';'
   27 lvar: lvar . ',' identificador
   29     | lvar . ',' error

    error  shift, and go to state 71
    ','    shift, and go to state 72
    ';'    shift, and go to state 73


state 49

   26 lvar: identificador .

    $default  reduce using rule 26 (lvar)


state 50

   15 lvariables: identificador "record" . lvar

    error         shift, and go to state 46
    "identifier"  shift, and go to state 23

    lvar           go to state 74
    identificador  go to state 49


state 51

   13 lvariables: identificador "union" . lvar ';'

    error         shift, and go to state 46
    "identifier"  shift, and go to state 23

    lvar           go to state 75
    identificador  go to state 49


state 52

   11 lvariables: identificador "array" . lvararreglo ';'

    error         shift, and go to state 68
    "identifier"  shift, and go to state 23

    lvararreglo    go to state 76
    identificador  go to state 70


state 53

   49 funcionmain: "function" TYPE_VOID "main function" '(' error . ')' '{' $@6 bloquedeclare listainstrucciones '}'

    ')'  shift, and go to state 77


state 54

   47 funcionmain: "function" TYPE_VOID "main function" '(' ')' . '{' $@5 bloquedeclare listainstrucciones '}'

    '{'  shift, and go to state 78


state 55

   59 funcion: "function" TYPE_VOID identificador '(' error . ')' '{' $@12 bloquedeclare listainstrucciones '}'

    ')'  shift, and go to state 79


state 56

   55 funcion: "function" TYPE_VOID identificador '(' $@9 . lparam $@10 ')' '{' bloquedeclare listainstrucciones '}'

    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18

    $default  reduce using rule 60 (lparam)

    lparam   go to state 80
    lparam2  go to state 81
    tipo     go to state 82


state 57

   57 funcion: "function" tipo identificador '(' error . ')' '{' $@11 bloquedeclare listainstrucciones '}'

    ')'  shift, and go to state 83


state 58

   52 funcion: "function" tipo identificador '(' $@7 . lparam $@8 ')' '{' bloquedeclare listainstrucciones '}'

    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18

    $default  reduce using rule 60 (lparam)

    lparam   go to state 84
    lparam2  go to state 81
    tipo     go to state 82


state 59

   25 record: "record" identificador '{' . $@4 lvariables '}'

    $default  reduce using rule 24 ($@4)

    $@4  go to state 85


state 60

   23 union: "union" identificador '{' . $@3 lvariables '}'

    $default  reduce using rule 22 ($@3)

    $@3  go to state 86


state 61

   17 lvariables: lvariables union ';' .

    $default  reduce using rule 17 (lvariables)


state 62

   18 lvariables: lvariables record ';' .

    $default  reduce using rule 18 (lvariables)


state 63

   10 lvariables: lvariables tipo "array" . lvararreglo ';'

    error         shift, and go to state 68
    "identifier"  shift, and go to state 23

    lvararreglo    go to state 87
    identificador  go to state 70


state 64

    7 lvariables: lvariables tipo lvar . ';'
   27 lvar: lvar . ',' identificador
   29     | lvar . ',' error

    ','  shift, and go to state 72
    ';'  shift, and go to state 88


state 65

   16 lvariables: lvariables identificador "record" . lvar ';'

    error         shift, and go to state 46
    "identifier"  shift, and go to state 23

    lvar           go to state 89
    identificador  go to state 49


state 66

   14 lvariables: lvariables identificador "union" . lvar ';'

    error         shift, and go to state 46
    "identifier"  shift, and go to state 23

    lvar           go to state 90
    identificador  go to state 49


state 67

   12 lvariables: lvariables identificador "array" . lvararreglo ';'

    error         shift, and go to state 68
    "identifier"  shift, and go to state 23

    lvararreglo    go to state 91
    identificador  go to state 70


state 68

   32 lvararreglo: error . lcorchetes

    '['  shift, and go to state 92

    lcorchetes  go to state 93


state 69

    9 lvariables: tipo "array" lvararreglo . ';'
   31 lvararreglo: lvararreglo . ',' identificador lcorchetes
   33            | lvararreglo . ',' error lcorchetes

    ','  shift, and go to state 94
    ';'  shift, and go to state 95


state 70

   30 lvararreglo: identificador . lcorchetes

    '['  shift, and go to state 92

    lcorchetes  go to state 96


state 71

   21 lvariables: tipo lvar error . ';'

    ';'  shift, and go to state 97


state 72

   27 lvar: lvar ',' . identificador
   29     | lvar ',' . error

    error         shift, and go to state 98
    "identifier"  shift, and go to state 23

    identificador  go to state 99


state 73

    8 lvariables: tipo lvar ';' .

    $default  reduce using rule 8 (lvariables)


state 74

   15 lvariables: identificador "record" lvar .
   27 lvar: lvar . ',' identificador
   29     | lvar . ',' error

    ','  shift, and go to state 72

    $default  reduce using rule 15 (lvariables)


state 75

   13 lvariables: identificador "union" lvar . ';'
   27 lvar: lvar . ',' identificador
   29     | lvar . ',' error

    ','  shift, and go to state 72
    ';'  shift, and go to state 100


state 76

   11 lvariables: identificador "array" lvararreglo . ';'
   31 lvararreglo: lvararreglo . ',' identificador lcorchetes
   33            | lvararreglo . ',' error lcorchetes

    ','  shift, and go to state 94
    ';'  shift, and go to state 101


state 77

   49 funcionmain: "function" TYPE_VOID "main function" '(' error ')' . '{' $@6 bloquedeclare listainstrucciones '}'

    '{'  shift, and go to state 102


state 78

   47 funcionmain: "function" TYPE_VOID "main function" '(' ')' '{' . $@5 bloquedeclare listainstrucciones '}'

    $default  reduce using rule 46 ($@5)

    $@5  go to state 103


state 79

   59 funcion: "function" TYPE_VOID identificador '(' error ')' . '{' $@12 bloquedeclare listainstrucciones '}'

    '{'  shift, and go to state 104


state 80

   55 funcion: "function" TYPE_VOID identificador '(' $@9 lparam . $@10 ')' '{' bloquedeclare listainstrucciones '}'

    $default  reduce using rule 54 ($@10)

    $@10  go to state 105


state 81

   61 lparam: lparam2 .
   64 lparam2: lparam2 . ',' tipo identificador
   65        | lparam2 . ',' tipo "reference" identificador
   68        | lparam2 . ',' tipo error
   69        | lparam2 . ',' tipo "reference" error

    ','  shift, and go to state 106

    $default  reduce using rule 61 (lparam)


state 82

   62 lparam2: tipo . identificador
   63        | tipo . "reference" identificador
   66        | tipo . error
   67        | tipo . "reference" error

    error         shift, and go to state 107
    "identifier"  shift, and go to state 23
    "reference"   shift, and go to state 108

    identificador  go to state 109


state 83

   57 funcion: "function" tipo identificador '(' error ')' . '{' $@11 bloquedeclare listainstrucciones '}'

    '{'  shift, and go to state 110


state 84

   52 funcion: "function" tipo identificador '(' $@7 lparam . $@8 ')' '{' bloquedeclare listainstrucciones '}'

    $default  reduce using rule 51 ($@8)

    $@8  go to state 111


state 85

   25 record: "record" identificador '{' $@4 . lvariables '}'

    "identifier"  shift, and go to state 23
    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18
    "record"      shift, and go to state 27
    "union"       shift, and go to state 28

    lvariables     go to state 112
    union          go to state 30
    record         go to state 31
    tipo           go to state 32
    identificador  go to state 33


state 86

   23 union: "union" identificador '{' $@3 . lvariables '}'

    "identifier"  shift, and go to state 23
    TYPE_INTEGER  shift, and go to state 13
    TYPE_REAL     shift, and go to state 14
    TYPE_CHAR     shift, and go to state 15
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_STRING   shift, and go to state 18
    "record"      shift, and go to state 27
    "union"       shift, and go to state 28

    lvariables     go to state 113
    union          go to state 30
    record         go to state 31
    tipo           go to state 32
    identificador  go to state 33


state 87

   10 lvariables: lvariables tipo "array" lvararreglo . ';'
   31 lvararreglo: lvararreglo . ',' identificador lcorchetes
   33            | lvararreglo . ',' error lcorchetes

    ','  shift, and go to state 94
    ';'  shift, and go to state 114


state 88

    7 lvariables: lvariables tipo lvar ';' .

    $default  reduce using rule 7 (lvariables)


state 89

   16 lvariables: lvariables identificador "record" lvar . ';'
   27 lvar: lvar . ',' identificador
   29     | lvar . ',' error

    ','  shift, and go to state 72
    ';'  shift, and go to state 115


state 90
